examples/invalid/40_type_arguments_on_non_generic_function.lane
module Examples.Invalid.TypeArgumentsOnNonGenericFunction

fn plain(value : Int) -> Int {
  value
}

let value : Int = plain[Int](1)
